make file runs and cleans both .c files

--- a/Assign1/makefile
+++ b/Assign1/makefile
@@ -1,5 +1,5 @@
 
-all: collatz 
+all: collatz shell
 	
 collatz:
 	gcc -Wall -g -std=c99 -o collatz collatz.c
@@ -9,4 +9,4 @@ shell:
 	gcc -Wall -g -std=c99 -o shell shell.c
 	shell
 clean:
-	rm collatz 
+	rm collatz shell
