--- a/Assign1/makefile
+++ b/Assign1/makefile
@@ -3,7 +3,7 @@ all: collatz shell
 	
 collatz:
 	gcc -Wall -g -std=c99 -o collatz collatz.c
-	collatz
+	collatz 5
 
 shell:
 	gcc -Wall -g -std=c99 -o shell shell.c
