used netbeans for  debugging

--- a/Assign1/makefile
+++ b/Assign1/makefile
@@ -1,12 +1,12 @@
 
-all: collatz shell
+all: shell collatz 
 	
 collatz:
 	gcc -Wall -g -std=c99 -o collatz collatz.c
-	collatz 5
+	
 
 shell:
 	gcc -Wall -g -std=c99 -o shell shell.c
-	shell
+	
 clean:
 	rm collatz shell
