it works sometimes?!?!?!?!!!!

--- a/Assign2/makefile
+++ b/Assign2/makefile
@@ -2,7 +2,7 @@
 all: pid stats 
 	
 pid:
-	gcc -Wall -g -std=c99 -o pid_manager pid_managerMain.c
+	gcc -Wall -g -std=c99 -o pid_manager pid_managerMain.c -pthread
 	
 
 stats:
