--- a/Assign2/makefile
+++ b/Assign2/makefile
@@ -6,7 +6,7 @@ pid:
 	
 
 stats:
-	gcc -Wall -g -std=c99 -o statistics statistics.c
+	gcc -Wall -g -std=c99 -o statistics statistics.c -pthread
 	
 clean:
 	rm pid_manager statistics
