--- a/Assign5/makefile
+++ b/Assign5/makefile
@@ -2,7 +2,7 @@
 all: vmm 
 	
 vmm:
-	vmm.h vmm.c gcc -Wall -g -std=c99 -o vmm vmm.c -pthread
+	gcc -Wall -g -std=c99 -o vmm vmm.c -pthread
 		
 clean:
 	rm vmm
